--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome!</title>
+  <title>지구의 날 9일 기도</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      background-color: #f0f8ff;
+    }
+    h1 {
+      margin-top: 40px;
+      color: #2e8b57;
+    }
+    .day-list {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      padding: 40px;
+      max-width: 600px;
+      margin: auto;
+    }
+    .day {
+      background-color: #ffffff;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+    .day:hover {
+      transform: translateY(-5px);
+    }
+    .icon {
+      font-size: 2em;
+    }
+    a {
+      text-decoration: none;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
-  <h1>환영합니다!</h1>
-  <p>이 페이지는 QR코드로 공유된 웹페이지입니다.</p>
+  <h1>🌍 지구의 날 9일 기도</h1>
+  <div class="day-list">
+    <div class="day"><a href="day1.html">4/14 🌌<br>심연</a></div>
+    <div class="day"><a href="day2.html">4/15 💡<br>빛</a></div>
+    <div class="day"><a href="day3.html">4/16 ☁️<br>하늘</a></div>
+    <div class="day"><a href="day4.html">4/17 🌍<br>땅</a></div>
+    <div class="day"><a href="day5.html">4/18 💧<br>물</a></div>
+    <div class="day"><a href="day6.html">4/19 🌱<br>식물</a></div>
+    <div class="day"><a href="day7.html">4/20 🐾<br>동물</a></div>
+    <div class="day"><a href="day8.html">4/21 🧍<br>인간</a></div>
+    <div class="day"><a href="day9.html">4/22 ✨<br>안식일</a></div>
+  </div>
 </body>
 </html>
