--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>🌍 지구의 날 9일 기도</h1>
+  <h1>🌍 2025년 지구의 날 9일 기도</h1>
   <div class="day-list">
     <div class="day"><a href="day1.html">4/14 🌌<br>심연</a></div>
     <div class="day"><a href="day2.html">4/15 💡<br>빛</a></div>
