--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 <body>
   <h1>🌍 2025년 지구의 날 9일 기도</h1>
   <div class="day-list">
-    <div class="day"><a href="day1.html">4/14 🌌<br>심연</a></div>
-    <div class="day"><a href="day2.html">4/15 💡<br>빛</a></div>
-    <div class="day"><a href="day3.html">4/16 ☁️<br>하늘</a></div>
-    <div class="day"><a href="day4.html">4/17 🌍<br>땅</a></div>
-    <div class="day"><a href="day5.html">4/18 💧<br>물</a></div>
-    <div class="day"><a href="day6.html">4/19 🌱<br>식물</a></div>
-    <div class="day"><a href="day7.html">4/20 🐾<br>동물</a></div>
-    <div class="day"><a href="day8.html">4/21 🧍<br>인간</a></div>
-    <div class="day"><a href="day9.html">4/22 ✨<br>안식일</a></div>
+    <div class="day"><a href="day1.html">4/14(월) 🌌<br>심연</a></div>
+    <div class="day"><a href="day2.html">4/15(화) 💡<br>빛</a></div>
+    <div class="day"><a href="day3.html">4/16(수) ☁️<br>하늘</a></div>
+    <div class="day"><a href="day4.html">4/17(목) 🌍<br>땅</a></div>
+    <div class="day"><a href="day5.html">4/18(금) 💧<br>물</a></div>
+    <div class="day"><a href="day6.html">4/19(토) 🌱<br>식물</a></div>
+    <div class="day"><a href="day7.html">4/20(일) 🐾<br>동물</a></div>
+    <div class="day"><a href="day8.html">4/21(월) 🧍<br>인간</a></div>
+    <div class="day"><a href="day9.html">4/22(화) ✨<br>안식일</a></div>
   </div>
 </body>
 </html>
