--- a/index.html
+++ b/index.html
@@ -12,27 +12,26 @@
     h1 {
       margin-top: 40px;
       color: #2e8b57;
+      font-size: 3em; /* 크게 조정 */
     }
     .day-list {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      padding: 40px;
-      max-width: 600px;
+      gap: 30px;
+      padding: 60px;
+      max-width: 1000px;
       margin: auto;
     }
     .day {
       background-color: #ffffff;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: transform 0.2s;
+      font-size: 2em; /* 텍스트 5배 확대 */
     }
     .day:hover {
-      transform: translateY(-5px);
-    }
-    .icon {
-      font-size: 2em;
+      transform: translateY(-10px);
     }
     a {
       text-decoration: none;
