--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
       background-color: #f0f8ff;
     }
     h1 {
-      margin-top: 40px;
+      margin-top: 60px;
       color: #2e8b57;
-      font-size: 3em; /* 크게 조정 */
+      font-size: 9em; /* 기존보다 3배 더 크게 (총 약 15배) */
     }
     .day-list {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 30px;
-      padding: 60px;
-      max-width: 1000px;
+      gap: 50px;
+      padding: 100px;
+      max-width: 1800px;
       margin: auto;
     }
     .day {
       background-color: #ffffff;
-      border-radius: 20px;
-      padding: 40px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 30px;
+      padding: 80px 20px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
       transition: transform 0.2s;
-      font-size: 2em; /* 텍스트 5배 확대 */
+      font-size: 6em; /* 기존보다 3배 더 크게 */
     }
     .day:hover {
-      transform: translateY(-10px);
+      transform: translateY(-15px);
     }
     a {
       text-decoration: none;
@@ -47,10 +47,4 @@
     <div class="day"><a href="day3.html">4/16(수) ☁️<br>하늘</a></div>
     <div class="day"><a href="day4.html">4/17(목) 🌍<br>땅</a></div>
     <div class="day"><a href="day5.html">4/18(금) 💧<br>물</a></div>
-    <div class="day"><a href="day6.html">4/19(토) 🌱<br>식물</a></div>
-    <div class="day"><a href="day7.html">4/20(일) 🐾<br>동물</a></div>
-    <div class="day"><a href="day8.html">4/21(월) 🧍<br>인간</a></div>
-    <div class="day"><a href="day9.html">4/22(화) ✨<br>안식일</a></div>
-  </div>
-</body>
-</html>
+    <div class="day"><a href="day6.html">4/19(토)
