--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       background-color: #f0f8ff;
       position: relative;
       min-height: 100vh;
-      padding-bottom: 150px; /* 하단 공간 확보 */
+      padding-bottom: 150px;
     }
-    h1 {
+    .title {
       margin-top: 60px;
       color: #2e8b57;
-      font-size: 9em;
+      font-size: 6em; /* 카드와 같은 크기 */
+      line-height: 1.2;
     }
     .day-list {
       display: grid;
@@ -56,7 +57,12 @@
   </style>
 </head>
 <body>
-  <h1>🌍 2025년 지구의 날 9일 기도</h1>
+  <div class="title">
+    2025년<br>
+    지구의 날 9일 기도<br>
+    (날짜를 누르세요)
+  </div>
+
   <div class="day-list">
     <div class="day"><a href="day1.html">4/14(월) 🌌<br>심연</a></div>
     <div class="day"><a href="day2.html">4/15(화) 💡<br>빛</a></div>
