--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 </head>
 <body>
   <div class="title">
-    2025년<br>
-    지구의 날 9일 기도<br>
-    (날짜를 누르세요)
+    <div style="color: #2e8b57;">2025년</div>
+    <div style="color: #2e8b57;">지구의 날 9일 기도</div>
+    <div style="color: #000000;">(날짜를 누르세요)</div>
   </div>
 
   <div class="day-list">
