--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 </head>
 <body>
   <div class="title">
-    <div style="color: #2e8b57;">2025년</div>
-    <div style="color: #2e8b57;">지구의 날 9일 기도</div>
+    <div style="color: #2e8b57;">2025년 지구의 날</div>
+    <div style="color: #2e8b57;">피조물과 함께하는 9일 기도</div>
     <div style="color: #000000;">(날짜를 누르세요)</div>
   </div>
 
