--- a/day1.html
+++ b/day1.html
@@ -8,26 +8,37 @@
       font-family: sans-serif;
       background-color: #eef2f3;
       padding: 40px;
-      line-height: 1.6;
+      line-height: 1.8;
     }
     .container {
-      max-width: 600px;
+      max-width: 700px;
       margin: auto;
       background: white;
-      padding: 30px;
+      padding: 40px;
       border-radius: 12px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     h1 {
       text-align: center;
-      color: #333;
+      color: #2e8b57;
+      font-size: 2.5em;
+    }
+    h2 {
+      color: #444;
+      margin-top: 40px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 8px;
+    }
+    p {
+      margin-bottom: 20px;
     }
     .icon {
       font-size: 3em;
       text-align: center;
+      margin-bottom: 10px;
     }
     .back {
-      margin-top: 20px;
+      margin-top: 40px;
       text-align: center;
     }
     .back a {
@@ -39,16 +50,73 @@
 <body>
   <div class="container">
     <div class="icon">🌌</div>
-    <h1>1일차: 심연</h1>
+    <h1>1일차 기도문: 심연</h1>
+
+    <h2>1. 시작기도: 우리의 지구를 위한 기도 (전반부)</h2>
     <p>
-      창조의 시작, 아무것도 없던 그곳.<br>
-      주님, 심연 속에서도 당신은 계셨습니다.<br>
-      우리의 마음이 혼돈 속에 있을지라도<br>
-      주님의 빛이 심연을 감싸듯<br>
-      오늘 우리의 깊은 곳에도 평화를 주옵소서.<br>
-      <br>
+      전능하신 하느님,<br>
+      하느님께서는 온 세계에 계시며<br>
+      가장 작은 피조물 안에 계시나이다.<br>
+      하느님께서 존재하는 모든 것을 온유로 감싸 안으시며<br>
+      저희에게 사랑의 힘을 부어주시어<br>
+      저희가 생명과 아름다움을 보살피게 하소서.<br>
+      또한 저희가 평화로 넘쳐<br>
+      한 형제자매로 살아가며<br>
+      그 누구에게도 해를 끼치지 않게 하소서.<br>
       아멘.
     </p>
+
+    <h2>2. 주제성구: 창세기 1,1-2</h2>
+    <p>
+      한처음에 하느님께서 하늘과 땅을 창조하셨다.<br>
+      땅은 아직 꼴을 갖추지 못하고 비어 있었는데,<br>
+      어둠이 심연을 덮고 하느님의 영이 그 물 위를 감돌고 있었다.
+    </p>
+
+    <h2>3. 멈추고 머무르기</h2>
+    <p>
+      잠시 멈추어 눈을 감고 깊은 숨을 들이쉬며,<br>
+      아직 꼴을 갖추지 못한 세상에 가득한 깊은 심연과 어둠,<br>
+      그 물 위를 감도는 하느님의 영을 기억합니다.
+    </p>
+
+    <h2>4. 생각거리</h2>
+    <p>
+      1970년 대기, 수질오염으로 몸살을 겪는 지구를 보존하기 위해 ‘지구의 날’이 창설되었습니다.<br>
+      지구의 날은 단순히 하루 동안 지구를 생각하는 날이 아닙니다.<br>
+      망가진 지구를 위해 우리가 나서야 함을 일깨워주는 날입니다.<br>
+      4월 22일 ‘지구의 날’까지 9일 기도를 바치며<br>
+      우리의 다짐을 행동으로 실천하는 시간을 가져보도록 합시다.
+    </p>
+
+    <h2>5. 실천</h2>
+    <ul>
+      <li>가족, 친구들에게 ‘지구의 날’에 대해 이야기해보세요.</li>
+      <li>우리가 할 수 있는 실천에 대해 나누어 보아요.</li>
+    </ul>
+
+    <h2>6. 마침기도: 우리의 지구를 위한 기도 (후반부)</h2>
+    <p>
+      오, 가난한 이들의 하느님,<br>
+      저희를 도와주시어<br>
+      저희가 하느님 보시기에 참으로 소중한 이들,<br>
+      이 지구의 버림받고 잊힌 이들을 구하게 하소서.<br>
+      저희 삶을 치유해 주시어<br>
+      저희가 이 세상을 훼손하지 않고 보호하게 하시며<br>
+      오염과 파괴가 아닌 아름다움의 씨앗을 뿌리게 하소서.<br>
+      가난한 이들과 지구를 희생시키면서<br>
+      이득만을 추구하는 이들의 마음을 움직여 주소서.<br>
+      저희가 하느님의 영원한 빛으로 나아가는 여정에서<br>
+      모든 것의 가치를 발견하고<br>
+      경외로 가득 차 바라보며<br>
+      모든 피조물과 깊은 일치를 이루고 있음을 깨닫도록<br>
+      저희를 가르쳐 주소서.<br>
+      하느님, 날마다 저희와 함께해 주시니 감사하나이다.<br>
+      비오니, 정의와 사랑과 평화를 위한 투쟁에서<br>
+      저희에게 힘을 주소서.<br>
+      아멘.
+    </p>
+
     <div class="back">
       <a href="index.html">← 돌아가기</a>
     </div>
