--- a/day9.html
+++ b/day9.html
@@ -8,52 +8,58 @@
       font-family: sans-serif;
       background-color: #f0f9f7;
       padding: 40px;
-      line-height: 1.8;
+      line-height: 1.9;
+      font-size: 1.5em; /* 글자 크기 확대 */
     }
     .container {
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       background: white;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 50px;
+      border-radius: 16px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
     h1 {
       text-align: center;
       color: #0a7a6d;
-      font-size: 2.5em;
+      font-size: 3em;
     }
     h2 {
       color: #333;
-      margin-top: 40px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 8px;
+      margin-top: 60px;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 10px;
+      font-size: 2em;
     }
     p {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
     ul {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
-    .icon {
-      font-size: 3em;
-      text-align: center;
+    li {
       margin-bottom: 10px;
     }
+    .icon {
+      font-size: 3.5em;
+      text-align: center;
+      margin-bottom: 20px;
+    }
     .back {
-      margin-top: 40px;
+      margin-top: 60px;
       text-align: center;
     }
     .back a {
       text-decoration: none;
       color: #0a7a6d;
+      font-size: 1em;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="icon">🕊️</div>
-    <h1>9일차 기도문: 안식일</h1>
+    <h1>9일차 기도문: 안식과 회복</h1>
 
     <h2>1. 시작기도: 우리의 지구를 위한 기도 (전반부)</h2>
     <p>
