--- a/day2.html
+++ b/day2.html
@@ -9,6 +9,7 @@
       background-color: #eef2f3;
       padding: 40px;
       line-height: 1.8;
+      font-size: 1.5em; /* 글자 크기 확대 */
     }
     .container {
       max-width: 700px;
