--- a/day8.html
+++ b/day8.html
@@ -22,19 +22,22 @@
     h1 {
       text-align: center;
       color: #c77700;
-      font-size: 2.5em;
+      font-size: 3em;
     }
     h2 {
       color: #333;
-      margin-top: 40px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 8px;
+      margin-top: 60px;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 10px;
+      font-size: 2em; /* 글자 크기 확대 */
     }
     p {
       margin-bottom: 20px;
+      font-size: 2em; /* 글자 크기 확대 */
     }
     ul {
       margin-bottom: 20px;
+      font-size: 2em; /* 글자 크기 확대 */
     }
     .icon {
       font-size: 3em;
