--- a/day1.html
+++ b/day1.html
@@ -29,9 +29,11 @@
       margin-top: 40px;
       border-bottom: 1px solid #ccc;
       padding-bottom: 8px;
+      font-size: 2em; /* 글자 크기 확대 */
     }
     p {
       margin-bottom: 20px;
+      font-size: 2em; /* 글자 크기 확대 */
     }
     .icon {
       font-size: 3em;
