--- a/day4.html
+++ b/day4.html
@@ -29,12 +29,15 @@
       margin-top: 40px;
       border-bottom: 1px solid #ccc;
       padding-bottom: 8px;
+      font-size: 2em; /* 글자 크기 확대 */
     }
     p {
       margin-bottom: 20px;
+      font-size: 2em; /* 글자 크기 확대 */
     }
     ul {
       margin-bottom: 20px;
+      font-size: 2em; /* 글자 크기 확대 */
     }
     .icon {
       font-size: 3em;
