--- a/day1.html
+++ b/day1.html
@@ -35,6 +35,10 @@
       margin-bottom: 20px;
       font-size: 2em; /* 글자 크기 확대 */
     }
+    ul {
+      margin-bottom: 20px;
+      font-size: 2em; /* 글자 크기 확대 */
+    }
     .icon {
       font-size: 3em;
       text-align: center;
